[project]
name = "chatbot_api"
version = "0.1"
dependencies = [
  "fastapi>=0.111,<0.113",
  "uvicorn[standard]>=0.30",
  "langchain==0.2.15",
  "langchain-community==0.2.15",
  "langchain-openai>=0.1.20",
  "openai>=1.36.0",
  "neo4j>=5.14.1",
  "pydantic>=2.5,<3",
  "tiktoken>=0.7.0",
  "python-dotenv>=1.0.1",
  "langchainhub>=0.1.14",
  "numpy>=1.26.2",
  "requests>=2.32,<3",
  "geopy>=2.4,<3"
]

[project.optional-dependencies]
dev = ["black", "flake8"]
